--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.5.2",
     "axios": "^0.19.2",
     "http-proxy-middleware": "^1.0.5",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -18,7 +19,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^9.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
